[package]
name = "s3-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3.19", features = ["derive"] }
tokio-stream = "0.1.14"
anyhow = "1.0.72"
regex = "1.9.3"
bytes = "1.5.0"
chrono = "0.4.31"

